# cse260-matmul-avx

./: CMakeLists.txt  README.md  benchmark.c  debugMat.c  debugMat.h  dgemm-blocked.c  dgemm-naive.c
